<resources>
    <string name="l_password">Password</string>
    <string name="l_input">Enter</string>
    <string name="l_create_account">Create an account</string>
    <string name="message_auth_going">Authorizing...</string>
    <string name="error_account_expired">This feature is available only in the full version</string>
    <string name="error_account_frozen">Account is blocked</string>
    <string name="error_internet_access">There is no Internet access</string>
    <string name="error_login">Enter login</string>
    <string name="error_password">Enter password</string>
    <string name="error_server">operation failed:</string>
    <string name="error_wrong_auth">Invalid username or password</string>
    <string name="error_wrong_serv">Connection to server is unavailable</string>
    <string name="error_comment">Enter your comment</string>
    <string name="error_empty_task_title">Enter the task name</string>
    <string name="correct_server">The server is available</string>
    <string name="error_wrong_answer_from_server">Wrong server response</string>
    <string name="error_wrong_answer_from_server_incorrect_root_container_title">Wrong server response. Wrong root package name: expected %1$s, but received %2$s</string>
    <string name="error_wrong_answer_from_server_absent_error_code_tag">Wrong server response. Missing tag error_code</string>
    <string name="error_xml_pull_parser">XML parse error. %1$s</string>
    <string name="error_unknown_type">Error. %1$s</string>
    <string name="error_code">Error code</string>
    <string name="error_ssl_handshake">Security certificate verification failed</string>
    <string name="error_standard_version">Your version is "Standard"</string>
    <string name="error_standard_version_during_synchronization">Synchronizing is available in the full version</string>
    <string name="error_end_emp_limit">Exceeded limit of users in organization</string>
    <string name="settings_user">User</string>
    <string name="settings_change_user">Current user:</string>
    <string name="settings_change_user_title">Change user</string>
    <string name="settings_clean_data">Clean all local data. Data will be restored from server after synchronizing</string>
    <string name="settings_clean_data_title">Clean data</string>
    <string name="settings_basic">General</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_mode_phone">Phone</string>
    <string name="settings_mode_table">Tablet</string>
    <string name="settings_mode_title">Portrait mode</string>
    <string name="settings_reminder_off">Off</string>
    <string name="settings_reminder_on">On</string>
    <string name="settings_reminder_title">Reminders</string>
    <string name="settings_about_program">About the app</string>
    <string name="txt_just_no">Cancel</string>
    <string name="txt_just_yes">Yes</string>
    <string name="settings_confirmation">Accept</string>
    <string name="settings_clean_base"> Are you sure you want to clean local data and lose all recent changes?</string>
    <string name="settings_logout">Are you sure you want to quit and lose all recent changes?</string>
    <string name="settings_site">Go to website</string>
    <string name="settings_community">Community</string>
    <string name="title_message">Discussion</string>
    <string name="title_view">View</string>
    <string name="title_edit">Edit</string>
    <string name="task_new">New task</string>
    <string name="task">Properties</string>
    <string name="task_comment">Type a note...</string>
    <string name="task_connection">Connections:</string>
    <string name="task_instruct">Assign</string>
    <string name="task_assign">Assign</string>
    <string name="task_set_term">Set term</string>
    <string name="task_performer_email">E-mail of the performer</string>
    <string name="task_status">Status</string>
    <string name="task_performer">Performer: </string>
    <string name="txt_status_icon">Task status icon</string>
    <string name="txt_collapse_icon">Opening / closing project tree-structure icon</string>
    <string name="txt_project_icon">Task project icon</string>
    <string name="connection_clear_mark">x</string>
    <string name="task_project">Projects</string>
    <string name="task_category">Tags</string>
    <string name="task_contact">Contacts</string>
    <string name="prompt_task_title">Say name of task...</string>
    <string name="prompt_task_comment">Say name of comment...</string>
    <string name="term">Term:&#160;</string>
    <string name="title_today_screen">Today: %s</string>
    <string name="task_today">Today</string>
    <string name="task_yesterday">Yesterday</string>
    <string name="task_tomorrow">Tomorrow</string>
    <string name="task_msg">Message</string>
    <string name="task_inbox">Unsorted</string>
    <string name="task_i">Me</string>
    <string name="task_review">Review</string>
    <string name="menu_subtasks">Subtasks</string>
    <string name="menu_term">Postpone date</string>
    <string name="menu_assign">Assign</string>
    <string name="menu_re_assign">Reassign</string>
    <string name="menu_dell">Delete</string>
    <string name="menu_properties">Properties</string>
    <string name="confirm_delete_title">Confirmation</string>
    <string name="confirm_delete_text">Are you sure you want to delete this task?</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_synchronize">Synchronize</string>
    <string name="synchronize_start">Synchronizing</string>
    <string name="synchronize_end">Synchronization completed</string>
    <string name="menu_show_hide_make_task">Show/hide completed tasks</string>
    <string name="menu_show_make_task">Show completed tasks</string>
    <string name="menu_hide_make_task">Hide completed tasks</string>
    <string name="subtasks_empty">Subtasks missing</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="menu_help">Help</string>
    <string name="menu_select_date">Select the date</string>
    <string name="menu_add_task">Add a task</string>
    <string name="menu_save_task">Save</string>
    <string name="notification_title">Reminder</string>
    <string name="notifications">Reminders</string>
    <string name="task_term">Date and reminder</string>
    <string name="btn_9_hours_using_12_hours_format">09:00 AM</string>
    <string name="btn_18_hours_using_12_hours_format">06:00 PM</string>
    <string name="btn_9_hours_using_24_hours_format">09:00</string>
    <string name="btn_18_hours_using_24_hours_format">18:00</string>
    <string name="btn_minus_30_minutes">-30 minutes</string>
    <string name="btn_minus_one_day">-1 day</string>
    <string name="btn_plus_30_minutes">+30 minutes</string>
    <string name="btn_plus_one_day">+1 day</string>
    <string name="btn_select_date">Select</string>
    <string name="btn_select_time">Select</string>
    <string name="btn_today">Today</string>
    <string name="btn_tomorrow">Tomorrow</string>
    <string name="btn_without_term">No term</string>
    <string name="btn_without_time">No time</string>
    <string name="sm_input">Unsorted</string>
    <string name="sm_categories">Tags</string>
    <string name="sm_projects">Projects</string>
    <string name="sm_available_me">Available to me</string>
    <string name="sm_instruct_i">Assigned to</string>
    <string name="sm_instruct_me">Assigned by</string>
    <string name="task_not_begin">Not started</string>
    <string name="task_completed">Completed</string>
    <string name="note">Note</string>
    <string name="task_in_work">In progress</string>
    <string name="task_ready">Ready</string>
    <string name="Mo">Mo</string>
    <string name="Tu">Tu</string>
    <string name="We">We</string>
    <string name="Th">Th</string>
    <string name="Fr">Fr</string>
    <string name="Sa">Sa</string>
    <string name="Su">Su</string>
    <string name="project_access">Access</string>
    <string name="feature_name">Name</string>
    <string name="feature_comment">Comment</string>
    <string name="settings_strikethru_tasks">Cross out completed tasks</string>
    <string name="title_emp">Staff</string>
    <string name="emp_display_as">Show as</string>
    <string name="settings_language">Language</string>
    <string name="settings_Markers">Colors</string>
    <string name="marker_color_text">Letter color</string>
    <string name="marker_color_background">Background color</string>
    <string name="task_files">Attach a file</string>
    <string name="copy_link">Copy the link</string>
    <string name="settings_show_categories_in_navigator">Show tags</string>
    <string name="not_follow">Don`t follow project</string>
    <string name="settings_task_count_in_navigator">Show the total number of tasks in the navigator</string>
    <string name="contact_groups">Groups of contacts</string>
    <string name="contacts">Contacts</string>
    <string name="contact_last_name">Surname</string>
    <string name="contact_name">First name</string>
    <string name="contact_sername">Middle name</string>
    <string name="contact_group">Group</string>
    <string name="contact_details">Detailed</string>
    <string name="contact_post">Post</string>
    <string name="contact_org">Organization</string>
    <string name="contact_birthday">Birthday</string>
    <string name="contact_home_adress">Home address</string>
    <string name="contact_work_adress">Organization address</string>
    <string name="display_project_subtasks">Show tasks of subprojects</string>
    <string name="address_country">Country</string>
    <string name="address_region">Region / district</string>
    <string name="address_city">City</string>
    <string name="address_street">Building, street</string>
    <string name="address_index">Postcode</string>
    <string name="search">Search</string>
    <string name="follow">Follow project</string>
    <string name="leave_project">Leave project</string>
    <string name="settings_sound">Sound effects</string>
    <string name="sort_by_color">Sorting by color</string>
    <string name="sort_by_term">Sorting by term</string>
    <string name="sort_by_date_creation">Sorting by date of creation</string>
    <string name="del_project">Delete this project</string>
    <string name="add_task_top">To the top of the list</string>
    <string name="add_task">Adding tasks</string>
    <string name="del_category">Delete category</string>
    <string name="change_category">Change category</string>
    <string name="express_panel">Express panel</string>
    <string name="notsave">Discard changes</string>
    <string name="autonomy">Offline mode</string>
    <string name="one_week_in_nav">One week in the calendar</string>
    <string name="settings_notification_for_me">New assignments for me</string>
    <string name="settings_notification_by_me">Assignments Complete</string>
    <string name="settings_notification_comments">Discussion of tasks</string>
    <string name="del_canceled">Deleting completed tasks</string>
    <string name="settings_notification_overdue">Overdue tasks</string>
    <string name="settings_notification_today">Tasks for today</string>
    <string name="overdue_in_nav">Overdue point in the navigator</string>
    <string name="settings_show_colors_in_navigator">Show colors</string>
    <string name="settings_show_emps_in_navigator">Show employees</string>
    <string name="settings_show_week_calendar">Number of weeks in the calendar</string>
    <string name="settings_show_week_calendar_first">Begin week on January 1</string>
    <string name="settings_chrono">Timing</string>
    <string name="settings_cal_period">Working hours</string>
    <string name="task_focus_menu">Focus</string>
    <string name="multi_mode">Select multiple tasks</string>
</resources>