<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/univ_padding_small">

        <EditText
            android:id="@+id/editText1"
            android:inputType="textCapSentences|textMultiLine"
            android:layout_width="match_parent"
            android:minHeight="@dimen/univ_ab_height"
            android:layout_height="wrap_content"
            android:hint="@string/address_country"/>

        <EditText
            android:id="@+id/editText2"
            android:inputType="textCapSentences|textMultiLine"
            android:layout_width="match_parent"
            android:minHeight="@dimen/univ_ab_height"
            android:layout_height="wrap_content"
            android:hint="@string/address_region"/>

        <EditText
            android:id="@+id/editText3"
            android:inputType="textCapSentences|textMultiLine"
            android:layout_width="match_parent"
            android:minHeight="@dimen/univ_ab_height"
            android:layout_height="wrap_content"
            android:hint="@string/address_city"/>

        <EditText
            android:id="@+id/editText4"
            android:inputType="textCapSentences|textMultiLine"
            android:layout_width="match_parent"
            android:minHeight="@dimen/univ_ab_height"
            android:layout_height="wrap_content"
            android:hint="@string/address_street"/>

        <EditText
            android:id="@+id/editText5"
            android:inputType="textCapSentences|textMultiLine"
            android:layout_width="match_parent"
            android:minHeight="@dimen/univ_ab_height"
            android:layout_height="wrap_content"
            android:hint="@string/address_index"/>

    </LinearLayout>

</ScrollView>
