<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/display_container"
        android:layout_height="@dimen/univ_ab_height"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivSex"
            android:layout_width="@dimen/univ_ab_height"
            android:layout_height="@dimen/univ_ab_height"
            android:padding="@dimen/univ_padding_small"
            android:clickable="true"
            android:src="@drawable/c_nobody"
            android:background="@drawable/selector_menu_item"/>

        <EditText
            android:id="@+id/etDisplayAs"
            style="@style/fppEt"
            android:hint="@string/emp_display_as"
            android:inputType="textCapWords" />


    </LinearLayout>

    <View style="@style/dividerSmall" />

    <LinearLayout
        android:id="@+id/group_container"
        android:layout_height="@dimen/univ_ab_height"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/selector_menu_item">

        <ImageView
            android:id="@+id/ivGroup"
            android:layout_width="@dimen/univ_ab_height"
            android:layout_height="@dimen/univ_ab_height"
            android:padding="@dimen/univ_padding_small"
            android:src="@drawable/cg_spr"/>

        <TextView
            android:id="@+id/tvGroup"
            style="@style/fppEt"
            android:textSize="@dimen/text_size_normalSP"
            android:hint="@string/contact_group"
            android:clickable="false"
            android:longClickable="false" />


    </LinearLayout>



    <View style="@style/dividerSmall" />

    <EditText
        android:id="@+id/etLastName"
        style="@style/fppEt"
        android:hint="@string/contact_last_name"
        android:inputType="textCapWords" />

    <View style="@style/dividerSmall" />

    <EditText
        android:id="@+id/etName"
        style="@style/fppEt"
        android:hint="@string/contact_name"
        android:inputType="textCapWords" />

    <View style="@style/dividerSmall" />

    <EditText
        android:id="@+id/etSername"
        style="@style/fppEt"
        android:hint="@string/contact_sername"
        android:inputType="textCapWords" />

    <View style="@style/dividerSmall" />

    <EditText
        android:id="@+id/etDetails"
        style="@style/fppEt"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/univ_ab_height"
        android:hint="@string/contact_details"
        android:inputType="textMultiLine" />

    <View style="@style/dividerSmall" />

    <EditText
        android:id="@+id/etPost"
        style="@style/fppEt"
        android:hint="@string/contact_post"
        android:inputType="textCapWords" />

    <View style="@style/dividerSmall" />

    <EditText
        android:id="@+id/etOrg"
        style="@style/fppEt"
        android:hint="@string/contact_org"
        android:inputType="textCapWords" />

    <View style="@style/dividerSmall" />

    <TextView
        android:id="@+id/tvHomeAdress"
        android:gravity="center_vertical"
        android:padding="@dimen/univ_padding_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/univ_ab_height"
        android:singleLine="false"
        android:hint="@string/contact_home_adress"
        android:textColor="@android:color/black"
        android:longClickable="false"
        android:background="@drawable/selector_menu_item"  />

    <View
        android:id="@+id/dividerHomeAdress"
        style="@style/dividerSmall" />

    <TextView
        android:id="@+id/tvWorkAdress"
        android:gravity="center_vertical"
        android:padding="@dimen/univ_padding_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/univ_ab_height"
        android:singleLine="false"
        android:hint="@string/contact_work_adress"
        android:textColor="@android:color/black"
        android:longClickable="false"
        android:background="@drawable/selector_menu_item"  />

    <View
        android:id="@+id/dividerWorkAdress"
        style="@style/dividerSmall" />

    <LinearLayout
        android:id="@+id/birthday_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/univ_ab_height"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/image_view"
            android:layout_weight="1"
            android:drawablePadding="@dimen/univ_padding_small"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvBirthday"
                style="@style/fppEt"
                android:hint="@string/contact_birthday"
                android:textColor="@android:color/black"
                android:longClickable="false"
                android:background="@drawable/selector_menu_item" />

        </LinearLayout>

        <ImageView
            android:id="@+id/remove_birthday"
            android:background="@drawable/selector_menu_item"
            android:layout_width="@dimen/univ_ab_height"
            android:layout_height="@dimen/univ_ab_height"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/file_remove_gray"
            android:padding="@dimen/univ_padding_small" />

    </LinearLayout>




    <View
        android:id="@+id/dividerBirthday"
        style="@style/dividerSmall" />
</merge>